Fix: CI and tests should work again
- MANIFEST should hopefully be consistent now
- Performed necessary maintenance for talking to modern versions of packages
- Fixed tests to run using github actions

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ passenv =
 envlist =
     clean,
     check,
-    {py36,py37,py38},
+    {py38,py39,py310},
     report
 ignore_basepython_conflict = true
 
@@ -31,10 +31,10 @@ isolated_build = true
 
 [testenv]
 basepython =
-    py36: {env:TOXPYTHON:python3.6}
-    py37: {env:TOXPYTHON:python3.7}
-    {bootstrap,clean,check,docs,spell,report,codecov}: {env:TOXPYTHON:python3.7}
     py38: {env:TOXPYTHON:python3.8}
+    py39: {env:TOXPYTHON:python3.9}
+    py310: {env:TOXPYTHON:python3.10}
+    {bootstrap,clean,check,docs,spell,report,codecov}: {env:TOXPYTHON:python3.10}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -45,8 +45,6 @@ passenv =
 usedevelop = True
 deps =
     pytest
-    pytest-cov
-    pytest-travis-fold
     numpy
     netcdf4
     pandas
@@ -59,7 +57,7 @@ deps =
     dtscalibration
 
 commands =
-    {posargs:pytest -v --cov}
+    {posargs:pytest -v}
 
 [testenv:check]
 deps =
@@ -90,4 +88,4 @@ deps = coverage
 [flake8]
 exclude = .tox,*.egg,build,data
 select = E,W,F
-ignore=E113,E116,E221,E226,E241,E251,E901,W503,F401
+ignore = E113,E116,E221,E226,E241,E251,E901,W503,F401,E741,F401,E203,F481
