--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,9 @@ graft src
 graft ci
 graft tests
 
+prune notebooks/EGU2020
+prune tests/data/*
+
 include .bumpversion.cfg
 include .coveragerc
 include .cookiecutterrc
@@ -12,7 +15,7 @@ include LICENSE
 include README.md
 include CHANGELOG.md
 
-include tox.ini .travis.yml .appveyor.yml pyproject.toml
+include tox.ini pyproject.toml
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
 
@@ -20,6 +23,7 @@ global-exclude *.py[cod] __pycache__/* *.so *.dylib
 include PyFOX.py
 include *.jpg
 include *.pdf
+include *.png
 recursive-include muppet_archiver *.bat
 recursive-include muppet_archiver *.py
 recursive-include muppet_archiver *.yml
